--- a/package.json
+++ b/package.json
@@ -30,5 +30,26 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "A simple color picker component crafted for react apps.",
+  "main": "index.js",
+  "directories": {
+    "example": "example"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RohanShah27/Color-Picker.git"
+  },
+  "keywords": [
+    "color-picker",
+    "reactjs-color-picker",
+    "color-selector"
+  ],
+  "author": "Rohan Shah",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/RohanShah27/Color-Picker/issues"
+  },
+  "homepage": "https://github.com/RohanShah27/Color-Picker#readme"
 }
