--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "color-picker-react",
+  "name": "react-color-selector",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
