--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "react-color-selector",
   "version": "0.1.0",
   "private": false,
+  "babel": {
+    "presets": [
+      "@babel/preset-react"
+    ]
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -14,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "publish:npm": "rm -rf dist && mkdir dist &&  babel ./src/ -d dist --copy-files"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,7 +42,10 @@
   "directories": {
     "example": "example"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/cli": "^7.10.1",
+    "@babel/preset-react": "^7.10.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/RohanShah27/Color-Picker.git"
