Updated code for packaging on npm

--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "build": "webpack",
     "publish:npm": "rm -rf dist && mkdir dist &&  babel ./src/ -d dist --copy-files"
   },
   "eslintConfig": {
@@ -38,13 +35,29 @@
     ]
   },
   "description": "A simple color picker component crafted for react apps.",
-  "main": "index.js",
+  "main": "./src/ColorPicker.js",
   "directories": {
     "example": "example"
   },
+  "peerDependencies": {
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
+  },
   "devDependencies": {
     "@babel/cli": "^7.10.1",
-    "@babel/preset-react": "^7.10.1"
+    "@babel/preset-react": "^7.10.1",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "path": "^0.12.7",
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^3.2.1"
   },
   "repository": {
     "type": "git",
